# mephi-labs

./: README.md
aisd2023/: README.md
aisd2023/1/: lab.c  lib_scanf.c  lib_scanf.h
aisd2023/2a/: el.h  lib_arr.c  lib_arr.h  lib_list(process).c  lib_scanf.h  lib_try-catch.h  main.c  stack.h  stack_arr.c  stack_list.c
aisd2023/2b/: lib_list(process).h  lib_scanf.c  lib_try-catch.c
aisd2023/3a/: lib_list.h  lib_scanf.c  lib_table.h  lib_try-catch.c  main.c
aisd2023/3b/: abc  lib_table.c  lib_table.h  main.c
aisd2023/3c/: main.c
aisd2023/4a/: main.c
aisd2023/4b/: main.c
aisd2023/5/: main.c
asm/: README.md
asm/lab1/: Makefile  a.out  my.asm  test.asm
asm/lab2/: Makefile  a.cpp  a.out  a.s  my.asm
asm/lab3/: Makefile  a.out  my.asm  my.cpp  my_.asm  out.txt
asm/lab4/: Makefile  a.out  my.asm  my.cpp
asm/lab5/: asm.s  lab5.h  lab_c  main.c  test_
asm/lab6/: Makefile  asm.s  lab5.h  lab_c  main.c
inf/lab1/: lab_01.c
inf/lab2/: 02  02_  lab_02  lab_02.c  lab_02_
inf/lab3/: app  lab.c  lib_arr.h  lib_scanf.h
inf/lab4/: .lab4.c.swp  help.c  help.h  lab4.c  lib_scanf.c  lib_scanf.h  lib_try-catch.h  lol
inf/lab5/: help.c  help.h  lab5.c  lib_try-catch.c  out.txt  result.txt  test
inf/lab6/: lab6.c  lib_list(process).h  lib_scanf.c  lib_scanf.h  lib_try-catch.h  lol
oop2023/1/: Matrix.cpp  Matrix.h  inputOutputMatrix.cpp  inputOutputMatrix.h  lib_io.h  main.cpp
oop2023/2/: .gitignore  .gitmodules  CMakeLists.txt
oop2023/2/src/card/: CMakeLists.txt
oop2023/2/src/card/include/Card/: card.h  hashCard.h
oop2023/2/src/card/source/: card.cpp
oop2023/2/src/deck/: CMakeLists.txt
oop2023/2/src/deck/include/Deck/: deck.h
oop2023/2/src/deck/source/: deck.cpp
oop2023/2/src/dialogue/: CMakeLists.txt
oop2023/2/src/dialogue/include/Dialogue/: dialog.h
oop2023/2/src/dialogue/source/: dialog.cpp
oop2023/2/src/lib_io/: CMakeLists.txt
oop2023/2/src/lib_io/include/lib_io/: lib_io.h
oop2023/2/src/main/: CMakeLists.txt
oop2023/2/src/main/source/: main.cpp
oop2023/2/src/tests/: CMakeLists.txt
oop2023/2/src/tests/source/: test.cpp
oop2023/2/src/utils/: CMakeLists.txt
oop2023/2/src/utils/include/Utils/: utils.h
oop2023/3/: .gitmodules  CMakeLists.txt
oop2023/3/src/GameGraphic/: CMakeLists.txt
oop2023/3/src/GameGraphic/include/: Builder.h  GameGraphic.h  config.h
oop2023/3/src/GameGraphic/materials/: map.txt
oop2023/3/src/GameGraphic/source/: Builder.cpp  GameGraphic.cpp
oop2023/3/src/GameLogic/: CMakeLists.txt
oop2023/3/src/GameLogic/Coords/: CMakeLists.txt
oop2023/3/src/GameLogic/Coords/include/coord/: CoordHasher.h  Coords.h  Direction.h
oop2023/3/src/GameLogic/Coords/source/: Coords.cpp  Direction.cpp
oop2023/3/src/GameLogic/Engine/: CMakeLists.txt
oop2023/3/src/GameLogic/Engine/include/engine/: AI.h  IEngine.h
oop2023/3/src/GameLogic/Engine/source/: AI.cpp
oop2023/3/src/GameLogic/Enviroment/: CMakeLists.txt
oop2023/3/src/GameLogic/Enviroment/include/enviroment/: Database.h  Enviroment.h
oop2023/3/src/GameLogic/Enviroment/source/: Database.cpp  Enviroment.cpp
oop2023/3/src/GameLogic/Informator/: CMakeLists.txt
oop2023/3/src/GameLogic/Informator/include/informator/: Informator.h
oop2023/3/src/GameLogic/Informator/source/: Informator.cpp
oop2023/3/src/GameLogic/Module/: CMakeLists.txt
oop2023/3/src/GameLogic/Module/include/module/: BasicCommandModule.h  BasicGenerator.h  BasicModule.h  BasicSensor.h  ICommandModule.h  IGenerator.h  IModule.h  ISensor.h  allBasic.h
oop2023/3/src/GameLogic/Module/source/: BasicSensor.cpp
oop2023/3/src/GameLogic/Mover/: CMakeLists.txt
oop2023/3/src/GameLogic/Mover/include/mover/: Mover.h
oop2023/3/src/GameLogic/Mover/source/: Mover.cpp
oop2023/3/src/GameLogic/Object/: CMakeLists.txt
oop2023/3/src/GameLogic/Object/include/object/: BasicCommandPlatform.h  BasicPlatform.h  ICommandPlatform.h  IObject.h  IPlatform.h
oop2023/3/src/GameLogic/Object/source/: BasicCommandPlatform.cpp  ICommandPlatform.cpp  IPlatform.cpp
oop2023/3/src/GameLogic/Subject/: CMakeLists.txt
oop2023/3/src/GameLogic/Subject/include/subject/: BasicSubject.h  IMoveable.h  ISubject.h  Moveable.h
oop2023/3/src/GameLogic/id_t/: CMakeLists.txt
oop2023/3/src/GameLogic/id_t/include/: IdTexture.h  id_t.h
oop2023/3/src/exec/: CMakeLists.txt  main.cpp
(+25 files in other folders)
